# kitty-answers

./: Dockerfile  docker-compose.yml  heroku.yml
answers/: noxfile.py  pyproject.toml  requirements.txt
answers/adapters/: MongoStorage.py
answers/adapters/QAStorage/: AbstractQAStorage.py  BaseQAStorage.py  MongoStorage.py
answers/adapters/tests/: conftest.py  fake_data.py  fake_storage.py  test_get_or_create.py
answers/answers/: dependencies.py  main.py  tasks.py  xl.py
answers/answers/db/: __init__.py  qa.py  rating.py  upload.py  user.py
answers/answers/models/: __init__.py  qa.py  rating.py  settings.py  upload.py  user.py
answers/answers/routers/: __init__.py  qa.py  rating.py  search.py  upload.py  web.py
answers/models/qa/: __init__.py
answers/services/qa/: __init__.py
answers/templates/: index.html
answers/tests/: test_answers.py
answers/tests/test_db/: test_qa.py
answers/web/: api_app.py  main.py  web_app.py
answers/web/dependencies/: __init__.py  qa.py
answers/web/routes/: qa.py
kitty/: auth_config.json  package-lock.json  package.json  vite.config.ts  vue.config.js
kitty/public/: index.html
kitty/src/: App.vue  icons.ts  main.ts
kitty/src/api/: models.ts  search.ts
kitty/src/auth/: auth0-plugin.ts  key.ts  plugin.ts
kitty/src/components/: About.vue  Answer.vue  Auth.vue  HelloWorld.vue  QA.vue
kitty/src/router/: index.ts
kitty/src/views/: QA.vue  Search.vue  Upload.vue  UploadReport.vue
kitty_old/: README.md  package.json  vue.config.js
kitty_old/public/: index.html  site.webmanifest
kitty_old/src/: main.ts
(+6 files in other folders)
